[gd_scene load_steps=4 format=3 uid="uid://b1mari1o6cpl0"]

[ext_resource type="Script" path="res://ui.gd" id="1_i0gqv"]
[ext_resource type="Texture2D" uid="uid://dlcmrn86n20m5" path="res://Tiny Swords (2)/Tiny Swords (Update 010)/UI/Buttons/Button_Blue_3Slides.png" id="2_4bm3c"]
[ext_resource type="Texture2D" uid="uid://cc7v7qxiss3nq" path="res://Tiny Swords (2)/Tiny Swords (Update 010)/UI/Buttons/Button_Blue_9Slides.png" id="3_ixbyy"]

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_i0gqv")

[node name="end_of_game_screen" type="Node2D" parent="."]
visible = false

[node name="RestartButton" type="Button" parent="end_of_game_screen"]
offset_left = 510.0
offset_top = 404.0
offset_right = 676.0
offset_bottom = 441.0

[node name="Sprite2D" type="Sprite2D" parent="end_of_game_screen/RestartButton"]
position = Vector2(83, 26)
texture = ExtResource("2_4bm3c")

[node name="end_game_scoreDisplay" type="Node2D" parent="end_of_game_screen"]

[node name="Sprite2D" type="Sprite2D" parent="end_of_game_screen/end_game_scoreDisplay"]
position = Vector2(595, 146)
texture = ExtResource("3_ixbyy")

[node name="points" type="Label" parent="end_of_game_screen/end_game_scoreDisplay"]
offset_left = 556.0
offset_top = 39.0
offset_right = 586.0
offset_bottom = 62.0
scale = Vector2(8, 8)
text = "0"

[node name="during_game_screen" type="Node2D" parent="."]

[node name="points" type="Label" parent="during_game_screen"]
offset_left = 554.0
offset_top = -1.0
offset_right = 594.0
offset_bottom = 22.0
scale = Vector2(3, 3)
text = "0"

[node name="before_game_screen" type="Node2D" parent="."]

[node name="PlayButton" type="Button" parent="before_game_screen"]
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="end_of_game_screen/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="before_game_screen/PlayButton" to="." method="_on_play_button_pressed"]
